implementación de login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="sobrepeso">Sobrepeso</string>
     <string name="obeso">Obeso</string>
     <string name="titleTablaComparativa">TABLA COMPARATIVA IMC</string>
+    <string name="error_login">Los datos introducidos no son correctos</string>
 
 </resources>
